--- a/views/quanlyhoadon.ejs
+++ b/views/quanlyhoadon.ejs
@@ -77,7 +77,7 @@
                                     <% element.orders.forEach(item => { %>
                                     <tr>
                                         <th scope="row"><%= i %></th>
-                                        <td><a href="" class="checkInfoCustomer" data-toggle="modal" data-target="#modalCheckCustomer"></a><%= item.productID %></td>
+                                        <td><a href="#" class="checkInfoCustomer" data-toggle="modal" data-target="#modalCheckCustomer"></a><%= item.productID %></td>
                                         <td><%= element.customerID %></td>
                                         <td><%= element.customerName %></td>
                                         <td><%= item.deliverMethod %></a></td>
@@ -90,31 +90,6 @@
                                 </tbody>
                             </table>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-            aria-hidden="true" style="z-index: 2000;">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title"><strong>THÔNG TIN SẢN PHẨM</strong></h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body" style="text-align: center;">
-                        <div class="tab-pane active" id="pro-img-1">
-                            <img id="modalImage" alt="" />
-                        </div>
-                        <h5 style="padding-top: 20px;"><i>Tên phiên đấu giá</i></h5>
-                        <h2><strong id="modalProductName"></strong></h2>
-                        <h5 style="padding-top: 20px;"><i>Tên sản phẩm</i></h5>
-                        <h4><strong id="modalAuctionName"></strong></h4>
-                        <h5 style="padding-top: 20px;"><i>Giá cuối cùng</i></h5>
-                        <h4 style="color: red;"><strong id="modalPrice"></strong></h4>
                     </div>
                 </div>
             </div>
