--- a/views/quanlyhoadon.ejs
+++ b/views/quanlyhoadon.ejs
@@ -77,8 +77,8 @@
                                     <% element.orders.forEach(item => { %>
                                     <tr>
                                         <th scope="row"><%= i %></th>
-                                        <td><a href="#" class="checkInfoCustomer" data-toggle="modal" data-target="#modalCheckCustomer"><%= item.productID %></a></td>
-                                        <td><%= element.customerID %></td>
+                                        <td><%= item.productID %></td>
+                                        <td><a href="#" class="checkInfoCustomer" data-toggle="modal" data-target="#modalCheckCustomer"><%= element.customerID %></a></td>
                                         <td><%= element.customerName %></td>
                                         <td><%= item.deliverMethod %></a></td>
                                         <td><%= item.paymentMethod %></a></td>
