--- a/views/quanlyhoadon.ejs
+++ b/views/quanlyhoadon.ejs
@@ -58,6 +58,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
+                        <i>Click vào <strong>Mã Khách Hàng</strong> để xem thông tin khách hàng!</i>
                         <div class="cart-table table-responsive mb-50">
                             <table class="table">
                                 <thead class="thead-dark">
