--- a/views/quanlyhoadon.ejs
+++ b/views/quanlyhoadon.ejs
@@ -65,7 +65,7 @@
                                     <tr>
                                         <th scope="col" style="text-align: left;"> #</th>
                                         <th scope="col" style="text-align: left;">Mã SP</th>
-                                        <th scope="col" style="text-align: left;">ID KH</th>
+                                        <th scope="col" style="text-align: left;"><strong>ID KH</strong></th>
                                         <th scope="col" style="text-align: left;">Khách hàng</th>
                                         <th scope="col" style="text-align: left;">PT Giao hàng</th>
                                         <th scope="col" style="text-align: left;">PT Thanh toán</th>
