--- a/views/quanlyhoadon.ejs
+++ b/views/quanlyhoadon.ejs
@@ -23,6 +23,7 @@
     <!-- Plugins Import CSS -->
     <link rel="stylesheet" href="css/import.css">
     <!-- Style CSS -->
+    <link rel="stylesheet" href="css/addNews.css">
     <link rel="stylesheet" href="style.css">
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="css/responsive.css">
